# mcp-remote-macos-use

./: Dockerfile  README.md  package.json  pyproject.toml  smithery.yaml  start_tcp_proxy.sh
src/: vnc_client.py
src/mcp_remote_macos_use/: server.py
